[build-system]
requires = [
    "scikit-build-core[pyproject]",
    "numpy==1.21"
]
build-backend = "scikit_build_core.build"

[project]
name = "AlbusIonosphere"
version = "1.0.0"
description = "ALBUS Ionospheric Calibration package for AIPS"
authors = [{ name = "James M Anderson" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    "numpy==1.21",
    "astropy",
    "ephem",      
    "requests",
    "pycurl"
]

[tool.scikit-build]
cmake.version = ">=3.10"
build.verbose = true
build-dir = "build"
wheel.packages = ["albusionosphere"]
sdist.include = [
    "CMakeLists.txt",
    "AlbusIonosphere.cxx",
    "source_dir"
]


[tool.scikit-build.cmake.define]
MAJOR_VERSION = "1"
MINOR_VERSION = "0"


